# ManipulationTeam-2

manipulation_final_project/: CMakeLists.txt  grasp_point_server.py  main.py  package.xml
manipulation_final_project/launch/: main.launch
manipulation_final_project/models/kinect/: model.sdf
manipulation_final_project/models/plastic_cup/: model.sdf
manipulation_final_project/srv/: GetGraspPoints.srv
panda_moveit_config/launch/: demo_gazebo.launch
panda_sim_moveit/: CMakeLists.txt  package.xml
panda_sim_moveit/scripts/: panda_obj_manipulate.py
panda_simulation/launch/: panda_simulation.launch
