<?xml version="1.0"?>
<package format="2">
  <name>manipulation_final_project</name>
  <version>0.0.0</version>
  <description>The manipulation_final_project package</description>

  <maintainer email="tsane@wpi.edu">tsane</maintainer>
  <license>None</license>

  <author email="tsane@wpi.edu">tsane</author>

  <depend>rospy</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
